<resources>
    <string name="app_name">MovieDB</string>
    <string name="btn_hit_main">HIT API</string>
    <string name="search_movie">Movie ID</string>
    <string name="img">img</string>
    <string name="title">title</string>
    <string name="sub_title">sub title</string>
    <string name="lbl_overview">Overview</string>
    <string name="lbl_release_date">Release Date</string>
    <string name="lbl_rating"><u>Rating</u></string>
    <string name="lbl_genres">Genres</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="now_playing">Now Playing</string>
    <string name="up_coming">Upcoming</string>
    <string name="popular">Popular</string>
    <string name="Search">Search</string>
    <string name="moviesearch">Search for Movie</string>
    <string name="backdrop">Backdrop</string>
    <string name="score">Score</string>
    <string name="popularity">Popularity</string>
    <string name="poster">poster</string>
    <string name="similar">Similar Movies</string>
    <string name="cast">Movie Casts</string>
    <string name="company">Companies</string>
</resources>