<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cons_movie_details_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragments.MovieDetailsFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/lbl_movie_details_title"
                android:layout_width="0dp"
                android:layout_height="55dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:gravity="center"
                android:text="@string/title"
                android:textColor="#000000"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/image_backdrop" />

            <TextView
                android:id="@+id/lbl_movie_details_genres"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/lbl_genres"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lbl_movie_details_release_date" />

            <ImageView
                android:id="@+id/image_backdrop"
                android:layout_width="0dp"
                android:layout_height="170dp"
                android:contentDescription="@string/backdrop"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.001"
                tools:src="@color/white" />

            <ImageView
                android:id="@+id/lbl_movie_details_poster"
                android:layout_width="115dp"
                android:layout_height="159dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/poster"
                android:scaleType="fitXY"
                app:layout_constraintEnd_toEndOf="@+id/image_backdrop"
                app:layout_constraintStart_toStartOf="@+id/image_backdrop"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@drawable/ic_baseline_image_24" />

            <TextView
                android:id="@+id/lbl_movie_details_score"
                android:layout_width="148dp"
                android:layout_height="0dp"
                android:layout_marginStart="8dp"
                android:text="@string/score"
                app:layout_constraintStart_toEndOf="@+id/lbl_movie_details_release_date"
                app:layout_constraintTop_toTopOf="@+id/lbl_movie_details_release_date" />

            <TextView
                android:id="@+id/lbl_movie_details_overview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/lbl_overview"
                android:textColor="#000000"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lbl_movie_details_genres" />

            <TextView
                android:id="@+id/lbl_movie_details_popularity"
                android:layout_width="133dp"
                android:layout_height="0dp"
                android:layout_marginStart="8dp"
                android:text="@string/popularity"
                app:layout_constraintStart_toEndOf="@+id/lbl_movie_details_score"
                app:layout_constraintTop_toTopOf="@+id/lbl_movie_details_score" />

            <TextView
                android:id="@+id/lbl_movie_details_release_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/lbl_release_date"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lbl_movie_details_title" />

            <TextView
                android:id="@+id/lbl_movie_details_similar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:orientation="horizontal"
                android:text="@string/similar"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lbl_movie_details_overview" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_movie_details_similar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lbl_movie_details_similar" />

            <TextView
                android:id="@+id/lbl_movie_details_casts"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:orientation="horizontal"
                android:text="@string/cast"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rv_movie_details_similar" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_movie_details_casts"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lbl_movie_details_casts" />

            <TextView
                android:id="@+id/lbl_movie_details_companies"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:orientation="horizontal"
                android:text="@string/company"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rv_movie_details_casts" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_movie_details_companies"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lbl_movie_details_companies" />

            <ProgressBar
                android:id="@+id/pbar_movie_details"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="344dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/lbl_movie_details_tagline"
                android:layout_width="0dp"
                android:layout_height="17dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="42dp"
                android:layout_marginEnd="16dp"
                android:gravity="center"
                android:text="@string/sub_title"
                android:textSize="12sp"
                android:textStyle="bold"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lbl_movie_details_poster" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>